<resources>
    <string name="app_name">Provider</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ok">Ok</string>
    <string name="error">Error</string>
    <string name="no">No </string>
    <string name="yes">Yes</string>
    <string name="next">next</string>
    <string name="skip">Skip</string>
    <string name="services">Services</string>
    <string name="with_simple_steps">with simple steps</string>
    <string name="you_can_have_aprovider">You can easily find the most suitable  \n service provider for you</string>
    <string name="alot_of_workers_are_available">Many service providers with high \n experience are now in your hands</string>
    <string name="start">Start</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="_have_account">have account</string>
    <string name="signin">Sign in</string>
    <string name="register_new_request">Register new account</string>
    <string name="user_name">User name</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="location">Location</string>
    <string name="by_signing_in_you_agreed_to">By Signing in you agreed to</string>
    <string name="terms">Terms &amp; Condition</string>
    <string name="by_signing_in_you_agreed_to_terms"><![CDATA[<font color=#FF000000> By Signing in you agreed to  </font>
     <font color=#dd9c40>   Terms &amp; Condition</font>
     <font color=#FF000000>    our </font>

]]>
    </string>
    <string name="some_text">
<![CDATA[
By signingup you aggreed to  <font color=\'#dd9c40\'>Terms &Conditions</font>  ]]>
    </string>
    <string name="edit">Edit</string>
    <string name="register">Register</string>
    <string name="signin_now"> Signin now </string>
    <string name="forget_password">Forget passowrd</string>
    <string name="sign">signin</string>
    <string name="register_new_account">Register new account</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="enter_your_emailto_get_code">Enter your email to change your password</string>
    <string name="change_password">Change password</string>
    <string name="if_you_cant_have_acode">If you can\'t have code</string>
    <string name="resend">Resend</string>
    <string name="new_password">New password</string>
    <string name="profile">Profile</string>
    <string name="contact_us">Contact us </string>
    <string name="orders">Orders</string>
    <string name="complains">Complains</string>
    <string name="notifactions">Notifactions</string>
    <string name="rights_and_terms">Rights and Terms</string>
    <string name="settings">Settings</string>
    <string name="mainpage">Home</string>
    <string name="nav_open">open</string>
    <string name="nav_close">close</string>
    <string name="empty_account_number">Please enter  account number</string>
    <string name="empty_account_name">Please enter Account name</string>
    <string name="empty_bank_id">Please enter Bank id</string>
    <string name="empty_iban_number">Please enter Iban number</string>
    <string name="undefined">undefined</string>
    <string name="save">Save</string>
    <string name="years">Years</string>
    <string name="company">Company</string>
    <string name="person">Person</string>
    <string name="please_choose_account_type">Please choose account type</string>
    <string name="msg_empty_title">please enter your title</string>
    <string name="done_service">Done</string>
    <string name="user">Client</string>
    <string name="please_select_subservie">Please select sub service</string>
    <string name="please_select_servie">Please select your service</string>
    <string name="orders_details">Order Details</string>
    <string name="waiting_approval">Waiting approval</string>
    <string name="on_hold_msg">Your request has been successfully sent to the service provider... Your request will be reviewed before approval, then the service provider will contact you to inform you of any other details.</string>
    <string name="order_id">  Order Id:</string>
    <string name="order_id_">  Order Id</string>
    <string name="payment_meyhod">Payment Method:</string>
    <string name="cash">Cash</string>
    <string name="total">Total</string>
    <string name="cancel">Cancel Order</string>
    <string name="inprogress_order">Inprogress Order</string>
    <string name="compelted_order"> Completed Order  </string>
    <string name="our_goal">Our Goal</string>
    <string name="goal_msg">The Online Services are not intended for use by anyone under the age of 18. If you are at least 18 years of age, then you must go through these Terms with the help of one of your parents and they must understand and agree to these Terms in order for you to use these Services</string>
    <string name="msg_content">Content</string>
    <string name="wite_contact_msg">Write Content</string>
    <string name="send">Send</string>
    <string name="terms_txt">
            In order to become a member of the application, you must first fill out the registration form, then agree and undertake to abide by the terms of use
            and upon approval of the registration; You agree to our terms and conditions \n \nThe application reserves the right to amend
            These Terms of Use at any time and without prior notice, and you agree that each visit you make to the application will
            Subject to the terms of use in effect at this time, and that your use of the application at any time confirms that you have read and
            Agreeing to these Terms and Conditions \n \nThe Online Services are not intended for use by anyone under  18 years old. If you are at least 18 years of age, then, you must view these terms with the help of one of your parents and they must understand and agree to those terms in order for you to use these services \n \nThese terms and conditions apply to the application on iPhones, iPads, android</string>
    <string name="edit_account">Edit Account</string>
    <string name="delet_account"><u>Delete account</u></string>
    <string name="repeat_new_password">Repeat Password</string>
    <string name="old_password">Current Password</string>
    <string name="language">language</string>
    <string name="english">English</string>
    <string name="delete">delete</string>
    <string name="choose_service_type">Choose Service Type</string>
    <string name="continuee"> Continue</string>
    <string name="graunte_customer_service">Customer service guarantee</string>
    <string name="pull_up">Swipe up</string>
    <string name="thanks_for_order">Thanks For Order</string>
    <string name="continuee_shopping">Continue Shopping</string>
    <string name="provider">Provider </string>
    <string name="providers">Providers </string>
    <string name="service_details">Service Details</string>
    <string name="order_servie">Order</string>
    <string name="are_you_sure_want_to_delete_this_account">Are you want to delete this Account?</string>
    <string name="sorry_youcant_order_login_first"> Sorry, you can\'t order now, Login First</string>
    <string name="no_thanks">No Thanks </string>
    <string name="write_your_comment">Write your comment</string>
    <string name="add_comment">Add Comment</string>
    <string name="orders_summry">Order Summary</string>
    <string name="expected_time">Expected Time </string>
    <string name="comment">Comment</string>
    <string name="order">Order</string>
    <string name="new_">New</string>
    <string name="prev">Pervious</string>
    <string name="current">Current</string>
    <string name="new_order">New Order</string>
    <string name="current_orders">Current Order</string>
    <string name="empty_address">Please Enter Your Address</string>
    <string name="location_is_off">location_is_off</string>
    <string name="location_off_body_message">location_off_body_message</string>
    <string name="not_all_permissions_accepted">Not All Permission Granted</string>
    <string name="reject">Reject</string>
    <string name="accept">Accept</string>
    <string name="order_has_been_done">Order has been done</string>
    <string name="complain">Complain</string>
    <string name="provider_review">Provider Review </string>
    <string name="change_pass">Change Password </string>
    <string name="enter_pin_code">Enter Pin Code </string>
    <string name="pincode_has_been_ent_to_your_phone">Pin Code has been send to phone </string>
    <string name="please_enter_your_pass">Please Enter your Pass</string>
    <string name="tax_not_included">Tax not inculded</string>
    <string name="logout">Logout</string>
    <string name="please_enter_your_phone">Please Enter your phone</string>
    <string name="no_internet">No Internet</string>
    <string name="empty_user_name">Please Enter User name</string>
    <string name="empty_num">Please Enter Phone number </string>
    <string name="msg_empty_email">Please Enter Email</string>
    <string name="msg_invalide_email">Email isn\'t valid  </string>
    <string name="empty_num_code">Please Enter Country Code </string>
    <string name="empty_country_id">Please choose your country</string>
    <string name="empty_cityid">Please Choose your city </string>
    <string name="enter_your_location">Please Choose your location</string>
    <string name="choose_country_first">Please Choose Country </string>
    <string name="msg_empty_password">Please enter your password</string>
    <string name="msg_empty_new_password">please enter your new password</string>
    <string name="msg_empty_confirm_password">Please Confirm yur password</string>
    <string name="msg_empty_confirm_new_password">please Repeat your password</string>
    <string name="password_not_matching">Password not matching</string>
    <string name="filter">Filter</string>
    <string name="price">Price</string>
    <string name="reviews">Reviews</string>
    <string name="distance">distance</string>
    <string name="done">done</string>
    <string name="deletefilter">Delete</string>
    <string name="high_to_law">High to law</string>
    <string name="law_to_high">Law to high</string>
    <string name="hours_count">Hours Count</string>
    <string name="hours_cost">Hour Cost</string>
    <string name="add_money">Withdraw Balance</string>
    <string name="balance">Balance :</string>
    <string name="add_balance">Add Balance</string>
    <string name="amount">Amount</string>
    <string name="add">Add</string>
    <string name="please_enter_your_title">Please Enter  title</string>
    <string name="msg_empty_content">please enter The content of the complaint</string>
    <string name="orderid">Order Id:</string>
    <string name="whatsup_not_installed">WhatsApp isn\'t installed on your phone</string>
    <string name="please_choose_your_locaion">Please choose your location</string>
    <string name="distance_between">Distance</string>
    <string name="ecperience">Experience</string>
    <string name="selected_provider">Selected Providers</string>
    <string name="please_choose_providers_first">Choose at least one provider</string>
    <string name="visit_start_time">visit time</string>
    <string name="am">am</string>
    <string name="pm">pm</string>
    <string name="choose_time_to_visit">Choose visit time</string>
    <string name="please_choose_time_to_Visit">Please Choose visit time</string>
    <string name="service_cost">Service Cost</string>
    <string name="service_tax">Service Tax</string>
    <string name="ipan_number">Iban Number </string>
    <string name="register_new_account_"> Register New account </string>
    <string name="account_id">Account Id </string>
    <string name="account_name">Account Name</string>
    <string name="bank">Bank </string>
</resources>