<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:paddingBottom="@dimen/_20sdp">

            <include
                android:id="@+id/lyt_header"
                layout="@layout/toolbar_auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <LinearLayout
                android:id="@+id/lyt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                 android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/lyt_header">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingTop="@dimen/_15sdp"
                    android:text="@string/register_new_request"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"

                    />




                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_account_id"
android:paddingHorizontal="@dimen/_10sdp"
                    android:hint="@string/account_id"
                    style="@style/editext"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_account_name"
                    android:paddingHorizontal="@dimen/_10sdp"

                    android:hint="@string/account_name"
                    style="@style/editext"/>


                <TextView
                    android:id="@+id/et_bank"
                    android:drawableEnd="@drawable/spinner_drop_dawn"
                    android:paddingHorizontal="@dimen/_10sdp"

                    android:hint="@string/bank"
                    style="@style/text_view" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:id="@+id/et_ipan"
                    android:hint="@string/ipan_number"
                    style="@style/editext"/>
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_register"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:text="@string/register_new_account_"
                    android:textAllCaps="false"
                    android:textSize="@dimen/_13sdp"
                    android:textStyle="bold"
                    app:cornerRadius="@dimen/_8sdp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
             android:layout_marginHorizontal="@dimen/_10sdp"       android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView4"

                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/_have_account"
                        android:textColor="@color/black" />

                    <TextView
                        android:id="@+id/btn_sign_in"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingStart="@dimen/_5sdp"
                        android:shadowColor="@color/gold"
                        android:text="@string/signin_now"
                        android:textColor="@color/gold"
                        android:textSize="@dimen/_14sdp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/_60sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <View

                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@color/black"
                        android:text="@string/_have_account" />
     <View

                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginEnd="@dimen/_5sdp"
                        android:layout_weight="1"
                        android:background="@color/black"
                        android:text="@string/_have_account" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="2dp"
                        android:layout_marginStart="@dimen/_2sdp"
                        android:layout_weight="1"
                        android:background="@color/black"
                        android:paddingStart="@dimen/_5sdp"
                        android:text="@string/signin_now" />

                </LinearLayout>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>