<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/lyt_img"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_200sdp"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/img_slider"
                android:layout_width="match_parent"

              android:maxHeight="@dimen/_250sdp"
                android:minHeight="@dimen/_200sdp"
                android:layout_height="wrap_content"
                 android:src="@drawable/walkthrought_0" />

            <TextView
                android:id="@+id/tv_skip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/img_slider"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_10sdp"
                android:gravity="center"
                android:text="@string/skip"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_23sdp"
            android:gravity="center"
            android:text="@string/services"
            android:textColor="@color/black"
            android:textSize="@dimen/_18sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/lyt_img" />

        <TextView
            android:id="@+id/tv_msg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
             android:minLines="2"
            android:singleLine="false"
            android:text="@string/alot_of_workers_are_available"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="@dimen/_10sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>