<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_100sdp"
            android:theme="@style/ThemeOverlay.MaterialComponents.Dark">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:expandedTitleMarginBottom="25dp"
                app:expandedTitleMarginStart="15dp"
                app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/app_name"
                    android:scaleType="centerCrop"
                    android:src="@color/grey_100"
                    app:layout_collapseMode="parallax" />


                <include
                    android:id="@+id/toolbar"
                    layout="@layout/toolbar_fragments"
                    app:layout_collapseMode="pin" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>
        </com.google.android.material.appbar.AppBarLayout>



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
              app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_5sdp"        android:layout_marginHorizontal="@dimen/_10sdp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tabBackground="@drawable/bg_rounded"
                app:tabIndicator="@drawable/bg_rounded_grey"
                app:tabIndicatorColor="@color/gold"
                app:tabIndicatorFullWidth="true"
                app:tabIndicatorHeight="@dimen/_40sdp"
                app:tabSelectedTextColor="@color/white"
                app:tabTextAppearance="@android:style/TextAppearance.Widget.TabWidget"
                app:tabTextColor="@color/grey_600">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_previous"
                    android:layout_width="wrap_content"

                    android:layout_height="wrap_content"
                    android:text="@string/prev"
                    android:textAllCaps="false" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_current"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current"
                    android:textAllCaps="false" />


                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tab_new"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/new_"
                    android:textAllCaps="false" />
            </com.google.android.material.tabs.TabLayout>


            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tabs" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>