<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="@dimen/_10sdp"
        android:background="@drawable/bg_rounded"
        android:paddingBottom="@dimen/_10sdp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/lyt_expand2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/txt1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/almarai_bold"
                    android:gravity="center"
                    android:text="@string/add_balance"
                    android:textColor="@color/grey_800"
                    android:textSize="@dimen/_15sdp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/iv_dawn" />

                <ImageView
                    android:id="@+id/iv_dawn"
                    android:layout_width="@dimen/_35sdp"
                    android:layout_height="@dimen/_35sdp"
                    android:paddingHorizontal="@dimen/_10sdp"
                    android:rotation="90"
                    android:src="@drawable/ic_arraw"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_amount"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:padding="@dimen/_5sdp"
                    android:inputType="numberDecimal"
                    android:layout_marginTop="@dimen/_10sdp"
                     android:gravity="center_vertical"
                    android:paddingStart="@dimen/_15sdp"
                    android:minLines="2"
android:background="@drawable/bg_rounded"

android:hint="@string/amount"
                      android:textColor="@color/black"
                    android:textSize="@dimen/_12sdp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/txt1" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_ok"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_45sdp"
                        android:layout_weight="1"
                        android:backgroundTint="@color/gold"
                        android:text="@string/add"
                        android:textAllCaps="false"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginTop="@dimen/_35sdp"
                        app:layout_constraintTop_toBottomOf="@id/et_amount"
                        android:layout_marginEnd="@dimen/_10sdp"    android:textColor="@color/white"
                        android:textSize="@dimen/_13sdp"
                        android:textStyle="bold"
                        app:cornerRadius="@dimen/_8sdp"
                       />



            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>